# rocket-sqlite

./: .gitignore  Cargo.toml  README.md  deploy.sh  publish.sh
deployment/resources/: Dockerfile  entrypoint.sh
deployment/terraform/: terraform.sh
deployment/terraform/terraform.tfstate.d/rocket-sqlite/: terraform.tfstate
docker/: Dockerfile  entrypoint.sh
secret-manager/: rotate-service-account-key.sh
src/: main.rs  sqlite_connection.rs
terraform/: main.tf  rocket-sqlite.tf
