[package]
name = "rocket-sqlite"
version = "0.1.0"
authors = ["Andreas Pålsson <a.palsson@gmail.com>"]
edition = "2018"

[dependencies]
rocket = { git ="https://github.com/SergioBenitez/Rocket" }
sqlite = "0.26.0"
thiserror = "1.0.22"
openssl = { version = "0.10", features = ["vendored"] }
reqwest = "0.11.3"

[dependencies.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket"



